@@ -1,3 +1,15 @@
+2008-01-31  Brady Eidson  <beidson@apple.com>
+
+        Reviewed by Maciej
+
+        Abstracted the concept of a "Locker" as upcoming work will rely on it.
+
+        * platform/Locker.h: Added.  Template class to "lock()" and "unlock()" some arbitrary object
+        (WebCore::Locker::Locker): Lock the object
+        (WebCore::Locker::~Locker): Unlock it
+        * platform/Threading.h: `class MutexLocker` is now `typedef Locker<Mutex>`
+        * WebCore.xcodeproj/project.pbxproj:
+
 2008-01-31  Kevin McCullough  <kmccullough@apple.com>
 
         <rdar://problem/5716912> REGRESSION (r29816): Can't navigate back to
